force-app/main/default/objects/Sticker__c/Sticker__c.object-meta.xml
<CustomObject>
    <label>Sticker</label>
    <nameField>
        <label>Sticker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stickers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>