force-app/main/default/objects/Sticker__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula
  >IMAGE(&quot;https://unpkg.com/wicked-coolkit/dist/stickers/png/&quot; &amp; Name &amp; &quot;.png&quot;, Image_Alt_Text__c,100, 100)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>