force-app/main/default/objects/Sticker__c/fields/Image_Alt_Text__c.field-meta.xml
<CustomField>
    <fullName>Image_Alt_Text__c</fullName>
    <label>Image Alt Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>